# Test

./: .gitignore  README.md
Cascades/: README.md
Detection/: CMakeLists.txt  README.md  run_detection.bat
Detection/DetectionWithCascade/DetectionWithCascade/: CascadeClassifier.cpp  CascadeDetector.cpp  CascadeWrapper.h  Detectors.cpp  Detectors.h  Source.cpp  stdafx.h
Detection/LogoDetection/: LogoDetection.sln
Detection/LogoDetection/LogoDetection/: Detectors.cpp  Detectors.h  GeneralTransforms.h  Geometry.h  GetFiles.h  Logger.cpp  Logger.h  LogoDetection.vcxproj  LogoDetection.vcxproj.filters  README.md  Source.cpp  stdafx.h
Training/: README.md  createBadExamples.bat  generate_bg.bat  generate_scripts_and_folders.bat  params_for_createsamples.txt  params_for_traincascade.txt  run_createexamples.bat  run_createsamples_generated.bat  run_traincascade.bat  run_traincascade_generated.bat  show_vec.bat  traincascade_out.txt  vector.vec
Training/BadExamples/: bg.txt  cs_bg.txt  tc_bg.txt
Training/CreateSamples/: CreateSamples.sln
Training/CreateSamples/CreateSamples/: CreateSamples.cpp  CreateSamples.vcxproj  CreateSamples.vcxproj.filters
Training/CreateScriptsAndFolders/: CreateScriptsAndFolders.sln
Training/CreateScriptsAndFolders/CreateScriptsAndFolders/: CreateScriptsAndFolders.vcxproj  Source.cpp
TryingSURF/: NewOPCV.bat  NewOPCV.sln  README.md
TryingSURF/NewOPCV/: NewOPCV.vcxproj  Source.cpp
data/: flickr_logos_27_dataset_training_set_annotation.txt
src/: CMakeLists.txt  Detectors.cpp  Detectors.h  GeneralTransforms.h  Geometry.h  GetFiles.h  Logger.cpp  Logger.h  LogoDetection.vcxproj  README.md  Source.cpp  detection.cpp  detection.hpp  file-utils.hpp  geom-utils.hpp  img-utils.hpp  install-opencv-4.sh  logger.cpp  logger.hpp  main.cpp  run_detection.bat
